# split-formers

./: README.md  pyproject.toml
splitformers/t5/: parallel_t5.py
